add new features

--- a/sales-management-app/src/main/resources/messages.properties
+++ b/sales-management-app/src/main/resources/messages.properties
@@ -9,3 +9,17 @@ app.images.icon.32=./images/icon-32.png
 app.images.icon.64=./images/icon-64.png
 app.images.logo=./images/logo300x300.png
 app.images.login.logo=./images/logo150x150.png
+
+# labels
+app.label.username=Username
+app.label.password=Password
+app.label.login=Login
+
+
+# messages
+app.messages.login.title=Secure Access
+
+
+# menu
+app.menu.system=System
+app.menu.exit=Exit
