add javafx compatibility

--- a/sales-management-app/src/main/resources/messages.properties
+++ b/sales-management-app/src/main/resources/messages.properties
@@ -14,6 +14,13 @@ app.images.login.logo=./images/logo150x150.png
 app.label.username=Username
 app.label.password=Password
 app.label.login=Login
+app.label.close=Close
+app.label.yes=Yes
+app.label.no=No
+
+# components
+app.alert.box.title=Alert Box
+app.confirm.box.title=Confirm Box
 
 
 # messages
