add javafx compatibility

--- a/sales-management-app/src/main/resources/messages.properties
+++ b/sales-management-app/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ app.confirm.box.title=Confirm Box
 
 # messages
 app.messages.login.title=Secure Access
+app.messages.exit.confirm=Are you sure?
 
 
 # menu
